# skills

./: .gitignore  README.md  pyproject.toml
.claude/: skills.json
blog-publish/: SKILL.md
core/: __init__.py  register.py  registry.py  skill.py
docs/superpowers/specs/: 2026-07-12-skills-framework-design.md
gowork/: __init__.py  blog_summarize.py  create_skill_demo.py
tests/: test_blog_summarize.py  test_create_skill_demo.py  test_integration.py  test_register.py  test_registry.py  test_skill.py
